[package]
name = "user_doc-doc_data"
version = "0.0.1"
edition = "2018"
authors = ["Plastic Arts Show <plastic.arts.show@gmail.com>"]
description = "Metadata describing user-facing documentation."
keywords = ["user", "documentation"]
categories = ["development-tools"]
license = "Apache-2.0"
repository = "https://github.com/plasticartsshow/user_doc"

[badges]
maintenance = { status = "experimental" }
github = { repository = "plasticartsshow/user_doc" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.38" }
once_cell = { version="1.7.2" }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = { version = "1.0.66", features = ["preserve_order"] }
strum = { version ="0.20.0", features = ["derive"] }
syn = { version = "1.0.74", features = ["full", "parsing"] }
