[package]
name = "user_doc-doc_data"
version = "1.0.1"
edition = "2021"
description = "Metadata describing user-facing documentation."
keywords = ["user", "documentation"]
categories = ["development-tools"]
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }
github = { repository = "plasticartsshow/user_doc" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
strum = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full", "parsing"] }
