[package]
name = "user_doc-doc_proc_macro"
version = "0.1.0"
edition = "2018"
authors = ["Plastic Arts Show <plastic.arts.show@gmail.com>"]
description = "An attribute procedural macro for generating user-facing documentation."
keywords = ["user", "documentation"]
categories = ["development-tools"]
license = "Apache-2.0"
repository = "https://github.com/plasticartsshow/user_doc"

[badges]
maintenance = { status = "experimental" }
github = { repository = "plasticartsshow/user_doc" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
syn = {version = "1.0.74", features = ["full", "parsing"]}
quote = {version = "1.0.9"}
chrono = {version = "0.4.19"}
proc-macro2 = {version = "1.0.28"}

[dependencies.doc_data]
package = "user_doc-doc_data"
path = "../doc_data"
version = "0.1.0" # same as main version
