[package]
name = "user_doc-doc_proc_macro"
version = "0.0.1"
edition = "2018"
authors = ["Plastic Arts Show <plastic.arts.show@gmail.com>"]
description = "Attribute and derive procedural macros for generating user-facing documentation."
keywords = ["user", "documentation"]
categories = ["development-tools"]
license = "Apache-2.0"
repository = "https://github.com/plasticartsshow/user_doc"

[badges]
maintenance = { status = "experimental" }
github = { repository = "plasticartsshow/user_doc" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
anyhow = { version = "1.0.38" }
once_cell = { version="1.7.2" }
proc-macro2 = { version = "1.0.28" }
quote = { version = "1.0.9" }
strum = { version ="0.20.0", features = ["derive"] }
syn = { version = "1.0.74", features = ["full", "parsing"] }

[dependencies.doc_data]
package = "user_doc-doc_data"
path = "../doc_data"
version = "0.0.1" # same as main version
