[package]
name = "user_doc-doc_proc_macro"
edition = "2021"
version = "1.0.0"
description = "Attribute and derive procedural macros for generating user-facing documentation."
keywords = ["user", "documentation"]
categories = ["development-tools"]
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
quote.workspace = true
strum = {workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full", "parsing" ] }
proc-macro2 = { version = "1.0.28" }
doc_data = { workspace = true}
