[package]
name = "user_doc-tests"
edition = "2021"
version = "1.0.1"
description = "Tests for user_doc."
keywords = ["user", "documentation"]
categories = ["development-tools"]
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }
github = { repository = "plasticartsshow/user_doc" }


[dependencies]
doc_data.workspace = true 
user_doc.workspace = true 
