[package]
name = "user_doc"
version = "0.0.11"
edition = "2021"
authors = ["Plastic Arts Show <plastic.arts.show@gmail.com>"]
description = "Attribute and derive procedural macros for generating user-facing documentation."
keywords = ["user", "documentation"]
categories = ["development-tools"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/plasticartsshow/user_doc"

[badges]
maintenance = { status = "experimental" }
github = { repository = "plasticartsshow/user_doc", workflow = "Rust" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
chrono = {version = "0.4.19"}

[dependencies.doc_data]
package = "user_doc-doc_data"
path = "../doc_data"
version = "0.0.11" # same as main version
[dependencies.doc_proc_macro]
package = "user_doc-doc_proc_macro"
path = "../doc_proc_macro"
version = "0.0.11" # same as main version
