[package]
name = "user_doc"
edition = "2021"
version = "1.0.0"
description = "Attribute and derive procedural macros for generating user-facing documentation."
keywords = ["user", "documentation"]
categories = ["development-tools"]

[badges]
maintenance = { status = "experimental" }
github = { repository = "plasticartsshow/user_doc", workflow = "Rust" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
chrono.workspace = true 
doc_data.workspace = true
doc_proc_macro.workspace = true
